gramdictru/wwwroot/css/site.css
/* ... */
.error-bar {
    background-color: red;
    color: white;
    font-size: medium;
    font-weight: normal;
    margin-top: 0.5rem;
    z-index: 9999999999999;
    position: relative;
}

.search-bar-padding {
    padding-bottom: 1px;
}

.page.is-searching {
    max-width: unset;
    height: 100%;
    overflow: auto;
    margin-left: unset;
    margin-right: unset;
    width: 100%;
    overflow-anchor: none;
}

.load-more {
    text-align: center;
}

.page.is-searching .body-content {
    max-width: calc(100% - var(--body-padding) * 2);
}

:target::before {
    content: "";
    display: inline-block;
    position: relative;
    z-index: -1;
    padding-top: var(--search-bar-total-height);
    margin-top: calc(0px - var(--search-bar-total-height));
    -webkit-background-clip: padding-box;
    -moz-background-clip: padding;
    background-clip: padding-box;
}

:target .permalink {
    margin-left: 0;
    padding-left: 0;
    margin-right: 0;
}

h1:target .permalink,
h2:target .permalink,
h3:target .permalink,
h4:target .permalink,
h5:target .permalink,
h6:target .permalink {
    margin-right: 0;
}

.filter-wrapper {
    margin: 0 auto;
    color: white;
    background: #333333;
    padding: 10px 10px;
    display: block;
    max-width: max-content;
}

.filter-control.fa-chevron-circle-down{background-color: #333333; background-image: url('../filter-icon.svg');}
.filter-control.fa-chevron-circle-up{background-color: #828282; background-image: url('../filter-icon.svg');}

.filter-control {
    color: white;
    margin-left: 0.5em;
    cursor: pointer;
    position: absolute;
    right: 0;
    border-radius: 100px;
    width: 21px;
    height: 21px;
    background-image: url('../filter-icon.svg');
    background-size: 55%;
    background-repeat: no-repeat;
    background-position: center;
    margin-right: 5px;
    font-size: 0;
}

.filter-table {
    display: table;
    margin: unset;
    font-size: large;
    margin: 0.2em;
    color: #F2F2F2;
}

.filter-table td {
    text-align: left;
    border: unset;
    white-space: nowrap;
    padding: 1px 10px;
}

.filter-table td:first-child, .filter-table.extra-table td {
    text-align: center;
}

.filter-table td:nth-child(2) {
    text-align: center;
}

.filter-indexes {
    display: flex;
    justify-content: space-between;
}

.filter {
    cursor: pointer;
}

.filter-active span:not(.tooltipClass) {
   color: #F2994A;
   font-weight: 700;
}

.tooltipClass {
    max-width: 40ex;
    font-weight: 500;
    text-align: center;
    font-size: 12px;
    white-space: normal;
}

.filter-tooltip-a {
	color: darkslategrey;
	text-decoration: none;
}

.filter-tooltip-a:visited {
    color: darkslategrey;
}

.filter-tooltip-a:hover {
    text-decoration: underline;
}

.circle-row {
    line-height: 2.1em;
    font-size: 1.2em;
}

.reset-filter-button-wrapper {
    display: flex;    
    align-items: center;
    justify-content: center;   
}

.reset-filter-button {
    cursor: pointer;
    display: flex;
    width: 98px;
    height: 26px;
    background: #828282;
    align-items: center;
    justify-content: center;
    font-size: 14px;
    font-weight: 500;
}

.list-filters {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    font-size: 16px;    
    padding: 0px 15px;
}

.scrollable-filters {
    overflow-x: auto;
    display: flex;
}

.scrollable-filters > * + * {
    border-left: 1px solid #4F4F4F;
}

.list-filters > tbody {
    margin: unset;
}

.filter-table.list-filters td,
.filter-table.list-filters td:first-child {
    text-align: left;
}

.list-filters-wrapper {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    align-self: stretch;
}

.filter-controls-area {
    padding-left: 1em;    
    color: #BDBDBD;
    font-size: 18px;
    font-weight: 500;
    text-align: right;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-grow: 1;
    align-items: flex-end;
    padding-right: 20px
}

.filter-controls-area .reset-filter-button{color: #F2F2F2;}

.smallbr {
    line-height: 50%;
}

.body-content > ol {
    list-style-position: inside;
    padding-left: 0;
    text-indent: 2em;
    margin: 0;
}

.body-content> ol > li {
    margin-top: 1em;
    line-height: 18px;
}

.__react_component_tooltip {
    padding: 0;
}

.tooltip-clickable-wrapper {
    padding: 0.5em 1em;
    background: #BDBDBD;
    border-radius: 3px;
}

.tooltip-clickable-wrapper a{
    color: #37A000;
    text-decoration: none;
}
.__react_component_tooltip.type-light{
    background: transparent;
}
.__react_component_tooltip.type-light.border.place-top:before {
    border-top: 15px solid #bdbdbd;
}
.__react_component_tooltip.type-light.place-top:after {
    border-top-color: #bdbdbd;   
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    margin-left: -5px;

}

.__react_component_tooltip.place-top:before{
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    bottom: -15px;
    left: 50%;
    margin-left: -5px;
}

.__react_component_tooltip.show {
    opacity: 1;
}

.list-filters{border-right: none;}
.filter-table.list-filters tr td{padding: 1px 15px;}
.scrollable-filters{width: 100%; padding-bottom: 0px;}
.filter-controls-area{margin-top: 10px; text-align: center; flex-direction: row; padding-right: 0; padding-left: 0; align-items: center;}
.reset-filter-button-wrapper{justify-content: flex-start;}   

.scrollable-filters::-webkit-scrollbar-track
{
    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    border-radius: 10px;
    background: #828282;
}

.scrollable-filters::-webkit-scrollbar
{
    height: 5px;    
}

.scrollable-filters::-webkit-scrollbar-thumb
{
    border-radius: 10px;
    box-shadow: inset 0 0 6px rgba(0,0,0,.3);
    background: #F2994A;
}

#search-results.scrolling-down .static-filters {
    position: relative;
    transform: translateY(var(--scroll-position));
}
/* ... */

